--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #5f8a9e;
+    background-color: #FA8072;
     color: #2C4C5B;
     font-family: 'Magic Retro', sans-serif;
     text-transform: lowercase;
